--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
     <title>Algo grind</title>
+    <link href="index.css" rel="stylesheet">
   </head>
   <body>
+    <div id="grind"></div>
     <script src="index.js"></script>
   </body>
 </html>
